--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -12,15 +12,15 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/iv_char"
         android:layout_centerHorizontal="true"
-        android:paddingTop="10dp"
+        android:layout_marginTop="20dp"
         android:text="Context"/>
 
     <ImageView
         android:id="@+id/iv_char"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
         android:layout_centerHorizontal="true"
-        android:paddingTop="10dp"/>
+        android:layout_marginTop="100dp"/>
 
     <TextView
         android:id="@+id/tv_detail"
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="Detail"
-        android:layout_below="@id/tv_name"/>
+        android:layout_below="@id/tv_name"
+        android:layout_marginTop="20dp"/>
 
 </RelativeLayout>
